visualization/final_viz/style.css
body {
  font: 12px sans-serif;
  font-weight: 400;
  text-align: center;
  background: #202020;
  color: #ffffff;
  font-family: 'Montserrat', sans-serif;
  padding-top: 110px;
}

html {
  background: transparent
}

h1 {
  font-weight: 300;
  color: #ffffff;
  font-size: 18px;
  margin: 25px 0px 25px 0px;
  padding: 0;
  text-transform: uppercase;
  font-weight: 700;
}

h2 {
  font-weight: 400;
  font-size: 14px;
  margin-bottom: 20px;
}
/*
.toggleSubreddits {
  border: 2px solid #ccc;
  width: 175px;
  height: 1000px;
  overflow-y: scroll; 
  color: #000000;
}
*/

.axis path,
.axis line {
  fill: none;
  stroke: #fff;
  shape-rendering: crispEdges;
}

.dot {
  stroke: #2f225d;
}

.tooltip {
  background: #fff;
  color: #202020;
  border-radius: 5px;
  position: absolute;
  padding: 10px;
  pointer-events: none;
  text-align: left;
  opacity: .25;
}

.wrap {
  width: 1050px;
  margin: 0 auto 0;
}

table {
  width: 85%;
  margin: 0 auto 0;
  text-align: left;
}

.sameLine {
  display: inline-block;
}

.xDropdown {
  width: 230px;
  height: 30px;
}

.yDropdown {
  width: 230px;
  height: 30px;
}

.extent{
  color: #202020;
  fill-opacity: .5;
}

.wordcloud1, .wordcloud2  {
  height: 300px;
  width: 500px;
}

rect.bordered {
  stroke: #E6E6E6;
  stroke-width:2px;   
}

text.mono {
  font-size: 7pt;
  font-family: Roboto, sans-serif;
  fill: #FFFFFF;
}

text.heatLegendLabel {
  font-size: 8pt;
  font-family: Roboto, sans-serif;
  fill: #FFFFFF;
}

text.dayLabel {
  font-size: 10pt;
  font-family: Roboto, sans-serif;
  fill: #FFFFFF;
}

text.axis-workweek {
  fill: #000;
}

text.axis-worktime {
  fill: #000;
}

td {
    vertical-align: middle;
}

.navbar-fixed-top {
  background: #202020;
}

.filter-picker {
    left: 51.75% !important;
    margin-left: -70px;
}

rect {
  stroke: 10px;
}

